--- a/HTML & CSS/INF103B_de_Ridder_Bryan/css/stijlblad.css
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/css/stijlblad.css
@@ -11,65 +11,72 @@ body {
 
 }
 
-/* Standard paragraph */
-p {
+/* Text and articles */
+p, article li {
     color: #333745;
     font-size: 23px;
     font-weight: 300;
     text-align: left;
     line-height: 150%;
-    margin-left: 120px;
-    margin-right: 120px;
-
+    list-style-type: circle;
 }
 
+article li {
+    float: left;
+    margin-left: 55px;
+    left: 20%;
+    right: 20%;
+}
+
+article {
+    margin-left: 120px;
+    margin-right: 120px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+span.highlight {
+    color: #77C4D3;
+}
+
+/* Headers */
 h1 {
-    margin-left: 120px;
-    margin-right: 120px;
-}
-
-/* banner and text inside the banner */
-.banner {
-    filter: brightness(65%);
-    width: 100%;
-    height: 600px;
-    background-size: cover;
-    background-position: center;
-}
-
-header {
-    text-align: center;
-
-}
-
-header h1, header p {
-    position: absolute;
-    font-size: 140px;
-    text-shadow: 0px 1px 2px #2f2f2f;
-    color: white;
-}
-
-header h1.intro {
-    top: 80px;
+    font-family: 'Amaranth', sans-serif;
     font-weight: 300;
-    font-size: 60px;
-    text-align: center;
 }
 
-header p.slogan {
-    top: 280px;
-    font-size: 30px;
-    font-weight: 300;
+h2 {
+    font-family: 'Amaranth', sans-serif;
+    font-size: 50px;
     text-align: center;
+    font-weight: 300;
+    line-height: 65px;
+    color: #77C4D3;
+}
+
+h3 {
+    font-size: 40px;
+    font-family: 'Amaranth', sans-serif;
+    text-align: center;
+    font-weight: 300;
+    color: #EA2E49;
+}
+
+h4.subtext {
+    font-size: 20px;
+    text-align: center;
+    color: grey;
+    line-height: 24px;
 }
 
 /* navbar */
-.logo, .alogo {
+li.logo, .alogo {
     float: right;
     padding: 0px;
     margin-top: 3px;
-    background-color: none;
-
+}
+a.logo:hover {
+    background-color: #333745;
 }
 
 nav ul {
@@ -95,6 +102,91 @@ nav a {
 nav li a:hover {
     background-color: #EA2E49;
     color: #DAEDE2;
+}
+
+/* banner and text inside the banner */
+.banner {
+    width: 100%; /* or whatever is required */
+    text-align: center; /* ensures the image is always in the h-middle */
+    overflow: hidden; /* hide the cropped portion */
+    filter: brightness(65%);
+}
+
+img.banner {
+    position: relative; /* allows repositioning */
+    left: 50%;
+    transform: translate(-50%, 0);
+    margin-top: -2px;
+}
+
+header {
+    text-align: center;
+    text-shadow: 0px 1px 2px #2f2f2f;
+}
+
+header h1, header p {
+    position: absolute;
+    font-size: 140px;
+    color: white;
+}
+
+header h1.intro {
+    top: 100px;
+    font-size: 60px;
+    text-align: center;
+    right: 10%;
+    left: 10%;
+}
+
+header p.slogan {
+    top: 280px;
+    font-size: 30px;
+    font-weight: normal;
+    text-align: center;
+    right: 10%;
+    left: 10%;
+}
+
+/* buttons */
+.button {
+    position: absolute;
+    top: 410px;
+    left: 30%;
+    right: 30%;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 10px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button1 {
+    color: white;
+    background-color: #EA2E49;
+    border: 2px solid #EA2E49;
+}
+
+.button1:hover {
+    background-color: white;
+    border: 2px solid white;
+    color: #EA2E49;
+}
+
+.button2 {
+    margin-left: 300px;
+    background-color: transparent;
+    color: white;
+    text-shadow: 0px 1px 1px #4b4b4b;
+    border: 2px solid #77C4D3;
+}
+
+.button2:hover {
+    background-color: #77C4D3;
+    color: white;
 }
 
 /* links */
