--- a/HTML & CSS/INF103B_de_Ridder_Bryan/css/stijlblad.css
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/css/stijlblad.css
@@ -11,7 +11,21 @@ body {
 
 }
 
+body.index {
+    font-family: 'Open Sans', sans-serif;
+    background-color: black;
+    margin: 0;
+
+}
+
 /* Text and articles */
+article {
+    margin-left: 120px;
+    margin-right: 120px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
 p, article li {
     color: #333745;
     font-size: 23px;
@@ -19,6 +33,8 @@ p, article li {
     text-align: left;
     line-height: 150%;
     list-style-type: circle;
+    margin-bottom: 60px;
+    margin-top: 60px;
 }
 
 article li {
@@ -28,56 +44,45 @@ article li {
     right: 20%;
 }
 
-article {
-    margin-left: 120px;
-    margin-right: 120px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
-
 span.highlight {
     color: #77C4D3;
 }
 
 /* Headers */
-h1 {
+h1, h2, h3 {
     font-family: 'Amaranth', sans-serif;
     font-weight: 300;
+    text-align: center;
 }
 
 h2 {
-    font-family: 'Amaranth', sans-serif;
     font-size: 50px;
-    text-align: center;
-    font-weight: 300;
-    line-height: 65px;
+    line-height: 70px;
     color: #77C4D3;
+    margin-bottom: -5px;
 }
 
 h3 {
     font-size: 40px;
-    font-family: 'Amaranth', sans-serif;
-    text-align: center;
-    font-weight: 300;
+    line-height: 25px;
     color: #EA2E49;
 }
 
-h4.subtext {
-    font-size: 20px;
+h4 {
+    font-size: 22px;
+    text-align: center;
+    line-height: 18px;
+    color: grey;
+}
+
+h5 {
+    font-size: 18px;
     text-align: center;
     color: grey;
-    line-height: 24px;
+    line-height: 18px;
 }
 
 /* navbar */
-li.logo, .alogo {
-    float: right;
-    padding: 0px;
-    margin-top: 3px;
-}
-a.logo:hover {
-    background-color: #333745;
-}
 
 nav ul {
     height: 68px;
@@ -92,6 +97,12 @@ nav li {
     float: left;
 }
 
+li.navlogo, .alogo {
+    float: right;
+    padding: 0px;
+    margin-top: 3px;
+}
+
 nav a {
     display: block;
     color: #77C4D3;
@@ -99,64 +110,91 @@ nav a {
     font-size: 18px;
 }
 
-nav li a:hover {
+nav li a:hover, nav li a.active {
     background-color: #EA2E49;
-    color: #DAEDE2;
+    color: white;
 }
 
-/* banner and text inside the banner */
-.banner {
-    width: 100%; /* or whatever is required */
-    text-align: center; /* ensures the image is always in the h-middle */
-    overflow: hidden; /* hide the cropped portion */
-    filter: brightness(65%);
+/* Main logos and banners */
+/* banner on the info page */
+.infobanner {
+    background: url(../images/photos/people.jpg) no-repeat;
+    background-position: center top;
+    background-attachment: fixed;
+    background-size: cover;
+    min-height: 100%;
+    height: 50vh;
+    width: 100%;
+    margin: 0;
+    padding-top: 5%;
 }
 
-img.banner {
-    position: relative; /* allows repositioning */
+/* video on the main page */
+video.bgvid {
+    position: fixed;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, 0);
-    margin-top: -2px;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background-color: black;
 }
 
+/* logo on the main page */
+.lineupbanner {
+    background: url(../images/photos/fireworks.jpg) no-repeat;
+    background-position: center bottom;
+    background-attachment: fixed;
+    background-size: cover;
+    min-height: 100%;
+    height: 50vh;
+    width: 100%;
+    margin: 0;
+    padding-top: 5%;
+}
+
+/* logo on the main page */
+.logo img {
+    width: 20%;
+    height: auto;
+    margin-top: 100px;
+
+}
+
+/* text inside the banners */
+/* all text in the header is aligned center and has a shadow */
 header {
     text-align: center;
     text-shadow: 0px 1px 2px #2f2f2f;
 }
 
 header h1, header p {
-    position: absolute;
     font-size: 140px;
     color: white;
 }
 
 header h1.intro {
-    top: 100px;
     font-size: 60px;
     text-align: center;
-    right: 10%;
-    left: 10%;
 }
 
 header p.slogan {
-    top: 280px;
     font-size: 30px;
     font-weight: normal;
     text-align: center;
-    right: 10%;
-    left: 10%;
+    margin-bottom: 50px;
 }
 
 /* buttons */
 .button {
-    position: absolute;
-    top: 410px;
-    left: 30%;
-    right: 30%;
     color: white;
     padding: 16px 32px;
-    text-align: center;
-    display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
     border-radius: 10px;
@@ -177,7 +215,7 @@ header p.slogan {
 }
 
 .button2 {
-    margin-left: 300px;
+    margin-left: 100px;
     background-color: transparent;
     color: white;
     text-shadow: 0px 1px 1px #4b4b4b;
@@ -189,8 +227,66 @@ header p.slogan {
     color: white;
 }
 
+/* lists */
+ul .paragraphlist li {
+    margin-bottom: 120px;
+}
+
 /* links */
 a:link, a:visited, a:hover, a:active {
     color: #77C4D3;
     text-decoration: none;
+}
+
+/* footer */
+footer {
+    background-color: #333745;
+    padding: 60px 120px 60px 120px;
+    height: 290px;
+    font-weight: 300;
+    border-top: 40px solid #77C4D3;
+}
+
+footer h4 {
+    text-align: left;
+    color: #EA2E49;
+}
+
+.footercolumns {
+    margin: auto;
+}
+
+footer div.column {
+    width: 310px;
+    padding-right: 10px;
+    color: #EA2E49;
+    display: inline-block;
+    vertical-align: top;
+}
+
+div.column ul {
+    list-style: none;
+    padding: 0;
+}
+
+div.column ul li {
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
+div.column ul li a {
+    color: white;
+}
+div.column ul li a:hover {
+    background-color: #EA2E49;
+    color: white;
+}
+
+footer p {
+    border-top: 1px solid grey;
+    padding-top: 25px;
+    margin: 25px 0 0 0;
+    font-size: 15px;
+    text-align: right;
+    color: white;
 }
