--- a/HTML & CSS/INF103B_de_Ridder_Bryan/css/stijlblad.css
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/css/stijlblad.css
@@ -1,3 +1,9 @@
+/*
+magentarood = #EA2E49;
+lichtblauw = #77C4D3;
+donkerblauw = #333745;
+*/
+
 html {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
@@ -8,43 +14,29 @@ body {
     font-family: 'Open Sans', sans-serif;
     background-color: white;
     margin: 0;
-
-}
-
-body.index {
-    font-family: 'Open Sans', sans-serif;
-    background-color: black;
-    margin: 0;
-
 }
 
 /* Text and articles */
 article {
-    margin-left: 120px;
-    margin-right: 120px;
+    margin-left: 240px;
+    margin-right: 240px;
     padding-top: 50px;
     padding-bottom: 50px;
+    text-align: center;
 }
 
-p, article li {
+p {
     color: #333745;
     font-size: 23px;
     font-weight: 300;
     text-align: left;
     line-height: 150%;
     list-style-type: circle;
-    margin-bottom: 60px;
-    margin-top: 60px;
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
 
-article li {
-    float: left;
-    margin-left: 55px;
-    left: 20%;
-    right: 20%;
-}
-
-span.highlight {
+span.lightblue {
     color: #77C4D3;
 }
 
@@ -64,7 +56,7 @@ h2 {
 
 h3 {
     font-size: 40px;
-    line-height: 25px;
+    line-height: 50px;
     color: #EA2E49;
 }
 
@@ -103,11 +95,13 @@ li.navlogo, .alogo {
     margin-top: 3px;
 }
 
-nav a {
+nav li a {
+    transition: background-color 0.2s ease;
     display: block;
     color: #77C4D3;
     padding: 22px 25px;
     font-size: 18px;
+    background-color: #333745;
 }
 
 nav li a:hover, nav li a.active {
@@ -116,9 +110,23 @@ nav li a:hover, nav li a.active {
 }
 
 /* Main logos and banners */
+/* banner on the homepage */
+.indexbanner {
+    font-family: 'Open Sans', sans-serif;
+    background-color: black;
+    margin: 0;
+    background: url(../images/photos/party.jpg) no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
+    min-height: 100%;
+    height: 50vh;
+    width: 100%;
+}
+
 /* banner on the info page */
 .infobanner {
-    background: url(../images/photos/people.jpg) no-repeat;
+    background: url(../images/photos/woman.jpg) no-repeat;
     background-position: center top;
     background-attachment: fixed;
     background-size: cover;
@@ -127,26 +135,10 @@ nav li a:hover, nav li a.active {
     width: 100%;
     margin: 0;
     padding-top: 5%;
+    transition-duration: 1s;
 }
 
-/* video on the main page */
-video.bgvid {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    background-color: black;
-}
-
-/* logo on the main page */
+/* Banner on the lineup page */
 .lineupbanner {
     background: url(../images/photos/fireworks.jpg) no-repeat;
     background-position: center bottom;
@@ -157,6 +149,20 @@ video.bgvid {
     width: 100%;
     margin: 0;
     padding-top: 5%;
+    transition-duration: 1s;
+}
+/* Banner on the tickets page */
+.ticketsbanner {
+    background: url(../images/photos/ticket.jpg) no-repeat;
+    background-position: center bottom;
+    background-attachment: fixed;
+    background-size: cover;
+    min-height: 100%;
+    height: 50vh;
+    width: 100%;
+    margin: 0;
+    padding-top: 5%;
+    transition-duration: 1s;
 }
 
 /* logo on the main page */
@@ -164,14 +170,16 @@ video.bgvid {
     width: 20%;
     height: auto;
     margin-top: 100px;
-
+    transition-duration: 0.4s;
 }
 
 /* text inside the banners */
 /* all text in the header is aligned center and has a shadow */
 header {
     text-align: center;
+    align-content: center;
     text-shadow: 0px 1px 2px #2f2f2f;
+    margin: auto;
 }
 
 header h1, header p {
@@ -227,15 +235,104 @@ header p.slogan {
     color: white;
 }
 
-/* lists */
-ul .paragraphlist li {
-    margin-bottom: 120px;
+/* Image gallery for lineup page*/
+ul.centeredgallery {
+    text-align: center;
+    margin: 150px auto 0px auto;
+    white-space: normal;
+    overflow: hidden;
+    list-style: none;
+}
+
+.artistcentered {
+    text-align: center;
+    margin: 50px auto 0px auto;
+    white-space: normal;
+    overflow: hidden;
+}
+
+article div.galleryimg {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
+
+.galleryimg {
+    transition: border 0.3s ease, filter 0.3s ease;
+    border: 0px solid #EA2E49;
+    filter: brightness(50%);
+    box-sizing: border-box;
+}
+
+.galleryimg:hover {
+    filter: brightness(100%);
+    border: 20px solid #EA2E49;
+}
+
+.artistimg {
+    border-radius: 50%;
+}
+
+.galleryimg img {
+    width: 100%;
+    height: 100%;
+}
+
+.galleryheader, .artistheader {
+    margin-top: 20px;
+    margin-bottom: 5px;
+}
+
+h3.galleryheader:hover {
+    color: #EA2E49;
+    text-decoration: underline;
+}
+
+.responsivegallery {
+    padding: 0 20px 120px;
+    float: left;
+    width: 24.99999%;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+@media only screen and (max-width: 1600px) {
+    .responsivegallery {
+        width: 33.33333%;
+        margin: 0 auto;
+    }
+}
+
+@media only screen and (max-width: 1257px) {
+    .responsivegallery {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 780px) {
+    .responsivegallery {
+        width: 100%;
+    }
+}
+
+/* artist pages */
+.artistgallery {
+    padding: 0 0px 0px;
+    float: left;
+    box-sizing: border-box;
+    width: 100%;
 }
 
 /* links */
 a:link, a:visited, a:hover, a:active {
     color: #77C4D3;
     text-decoration: none;
+    font-weight: normal;
+}
+
+a:hover {
+    color: #EA2E49;
 }
 
 /* footer */
@@ -277,6 +374,7 @@ div.column ul li {
 div.column ul li a {
     color: white;
 }
+
 div.column ul li a:hover {
     background-color: #EA2E49;
     color: white;
