--- a/HTML & CSS/INF103B_de_Ridder_Bryan/css/stijlblad.css
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/css/stijlblad.css
@@ -75,50 +75,85 @@ h5 {
 }
 
 /* navbar */
-
 nav ul {
     position: fixed;
     height: 68px;
-    right: 0;
-    left: 0;
-    list-style-type: none;
+    width: 100%;
     margin: 0;
+    padding: 0;
     background-color: #333745;
-    padding-right: 180px;
-    padding-left: 120px;
+    list-style-type: none;
     z-index: 1;
 }
 
-nav li {
+nav ul li {
     float: left;
 }
 
-nav li a {
-    transition: background-color 0.2s ease;
+.firstitem {
+    margin-left: 9%;
+}
+
+nav ul li a {
     display: block;
     color: #77C4D3;
     padding: 22px 25px;
     font-size: 18px;
 }
 
-nav li a.hoverable:hover, nav li a.active {
+nav ul li a.hoverable:hover, nav li a.active {
     background-color: #EA2E49;
     color: white;
+
 }
 
-li.navlogo, .alogo {
+nav li.navlogo, .alogo {
     float: right;
-    padding: 0px;
+    margin-right: 9%;
+    padding: 0;
     margin-top: 3px;
 }
 
-/* Main logos and banners */
+/* navbar dropdown menu */
+/* display none at first */
+nav ul ul {
+    display: none;
+    position: absolute;
+    background-color: transparent;
+}
+
+/* reveals ul on hover */
+nav ul li:hover > ul {
+    display: block;
+}
+
+nav ul ul li {
+    width: 180px;
+    float: none;
+    position: relative;
+    background-color: #77C4D3;
+    display: list-item;
+}
+
+nav ul li ul li a.hoverable {
+    color: #333745;
+    text-shadow: 0 1px 1px white;
+    font-size: 15px;
+    text-align: left;
+}
+
+nav ul li ul li a.hoverable:hover {
+    font-size: 15px;
+    text-align: left;
+    color: white;
+    text-shadow: 0 1px 2px #2f2f2f;
+
+}
+
+/* main logos and banners */
 /* banner on the homepage */
 .indexbanner {
-    font-family: 'Open Sans', sans-serif;
-    background: url(../images/photos/party.jpg) no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
+    background: url(../images/photos/party.jpg) no-repeat fixed center center;
     background-size: cover;
     min-height: 100%;
     height: 85vh;
@@ -130,44 +165,35 @@ li.navlogo, .alogo {
 
 /* banner on the info page */
 .infobanner {
-    background: url(../images/photos/woman.jpg) no-repeat;
-    background-position: center top;
-    background-attachment: fixed;
+    background: url(../images/photos/woman.jpg) no-repeat fixed center top;
     background-size: cover;
     min-height: 100%;
     height: 50vh;
     width: 100%;
     margin: 0;
     padding-top: 5%;
-    transition-duration: 1s;
 }
 
-/* Banner on the lineup page */
+/* banner on the lineup page */
 .lineupbanner {
-    background: url(../images/photos/fireworks.jpg) no-repeat;
-    background-position: center bottom;
-    background-attachment: fixed;
+    background: url(../images/photos/fireworks.jpg) no-repeat fixed center bottom;
     background-size: cover;
     min-height: 100%;
     height: 50vh;
     width: 100%;
     margin: 0;
     padding-top: 5%;
-    transition-duration: 1s;
 }
 
-/* Banner on the tickets page */
+/* banner on the tickets page */
 .ticketsbanner {
-    background: url(../images/photos/ticket.jpg) no-repeat;
-    background-position: center bottom;
-    background-attachment: fixed;
+    background: url(../images/photos/ticket.jpg) no-repeat fixed center bottom;
     background-size: cover;
     min-height: 100%;
     height: 50vh;
     width: 100%;
     margin: 0;
     padding-top: 5%;
-    transition-duration: 1s;
 }
 
 /* text inside the banners */
@@ -175,7 +201,7 @@ li.navlogo, .alogo {
 header {
     text-align: center;
     align-content: center;
-    text-shadow: 0px 1px 2px #2f2f2f;
+    text-shadow: 0 1px 2px #2f2f2f;
     margin: auto;
 }
 
@@ -230,7 +256,7 @@ header p.slogan {
     margin-left: 100px;
     background-color: transparent;
     color: white;
-    text-shadow: 0px 1px 1px #4b4b4b;
+    text-shadow: 0 1px 1px #4b4b4b;
     border: 2px solid #77C4D3;
 }
 
@@ -242,7 +268,7 @@ header p.slogan {
 /* Image gallery for lineup page*/
 ul.centeredgallery {
     text-align: center;
-    margin: 150px auto 0px auto;
+    margin: 150px auto 0 auto;
     white-space: normal;
     overflow: hidden;
     list-style: none;
@@ -250,7 +276,7 @@ ul.centeredgallery {
 
 .artistcentered {
     text-align: center;
-    margin: 50px auto 0px auto;
+    margin: 50px auto 0 auto;
     white-space: normal;
     overflow: hidden;
 }
@@ -263,11 +289,11 @@ article div.galleryimg {
 
 .galleryimg {
     transition: all .5s ease;
-    border: 0px solid #EA2E49;
     filter: brightness(50%);
     box-sizing: border-box;
     transform: scale(1.0);
 }
+
 .galleryimg:hover {
     filter: brightness(100%);
     transform: scale(1.1);
@@ -300,7 +326,7 @@ h3.galleryheader:hover {
 }
 
 .responsivegallery {
-    padding: 0 20px 120px;
+    padding: 0 0 120px;
     float: left;
     width: 24.99999%;
     list-style: none;
@@ -329,7 +355,7 @@ h3.galleryheader:hover {
 
 /* artist pages */
 .artistgallery {
-    padding: 0 0px 0px;
+    padding: 0;
     float: left;
     box-sizing: border-box;
     width: 100%;
