--- a/HTML & CSS/INF103B_de_Ridder_Bryan/css/stijlblad.css
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/css/stijlblad.css
@@ -4,24 +4,26 @@ lichtblauw = #77C4D3;
 donkerblauw = #333745;
 */
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 html {
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
 }
 
 body {
     font-family: 'Open Sans', sans-serif;
     background-color: white;
-    margin: 0;
 }
 
 /* Text and articles */
 article {
-    margin-left: 240px;
-    margin-right: 240px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    box-sizing: border-box;
+    width: 70%;
+    margin: 0 15%;
+    margin-bottom: 60px;
     text-align: center;
 }
 
@@ -43,6 +45,7 @@ span.lightblue {
 /* Headers */
 h1, h2, h3 {
     font-family: 'Amaranth', sans-serif;
+    margin-top: 60px;
     font-weight: 300;
     text-align: center;
 }
@@ -131,13 +134,12 @@ nav ul ul li {
     width: 180px;
     float: none;
     position: relative;
-    background-color: #77C4D3;
+    background-color: #333745;
     display: list-item;
 }
 
 nav ul li ul li a.hoverable {
-    color: #333745;
-    text-shadow: 0 1px 1px white;
+    color: #77C4D3;
     font-size: 15px;
     text-align: left;
 }
@@ -266,25 +268,10 @@ header p.slogan {
 }
 
 /* Image gallery for lineup page*/
-ul.centeredgallery {
+.centeredgallery {
     text-align: center;
-    margin: 150px auto 0 auto;
-    white-space: normal;
     overflow: hidden;
     list-style: none;
-}
-
-.artistcentered {
-    text-align: center;
-    margin: 50px auto 0 auto;
-    white-space: normal;
-    overflow: hidden;
-}
-
-article div.galleryimg {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
 }
 
 .galleryimg {
@@ -306,15 +293,6 @@ article div.galleryimg {
     overflow: hidden;
 }
 
-.artistimg {
-    border-radius: 50%;
-}
-
-.galleryimg img {
-    width: 100%;
-    height: 100%;
-}
-
 .galleryheader, .artistheader {
     margin-top: 20px;
     margin-bottom: 5px;
@@ -326,31 +304,9 @@ h3.galleryheader:hover {
 }
 
 .responsivegallery {
-    padding: 0 0 120px;
-    float: left;
-    width: 24.99999%;
+    margin-top: 120px;
     list-style: none;
-    box-sizing: border-box;
-}
-
-@media only screen and (max-width: 1600px) {
-    .responsivegallery {
-        width: 33.33333%;
-        margin: 0 auto;
-    }
-}
-
-@media only screen and (max-width: 1257px) {
-    .responsivegallery {
-        width: 49.99999%;
-        margin: 6px 0;
-    }
-}
-
-@media only screen and (max-width: 780px) {
-    .responsivegallery {
-        width: 100%;
-    }
+    display: inline-block;
 }
 
 /* artist pages */
@@ -391,8 +347,8 @@ a:hover {
 /* footer */
 footer {
     background-color: #333745;
-    padding: 60px 120px 60px 120px;
-    height: 290px;
+    padding: 60px 120px;
+    height: auto;
     font-weight: 300;
     border-top: 40px solid #77C4D3;
 }
@@ -400,6 +356,7 @@ footer {
 footer h4 {
     text-align: left;
     color: #EA2E49;
+    padding-top: 25px;
 }
 
 .footercolumns {
@@ -420,7 +377,7 @@ div.column ul {
 }
 
 div.column ul li {
-    margin-bottom: 10px;
+    margin-top: 10px;
     font-size: 15px;
 }
 
