--- a/HTML & CSS/INF103B_de_Ridder_Bryan/css/basisstijlblad.css
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/css/basisstijlblad.css
@@ -2,6 +2,8 @@
 magentarood = #EA2E49;
 lichtblauw = #77C4D3;
 donkerblauw = #333745;
+
+TODO: alle stijlbladen voor specifieke pagina's in een apart stijlblad doen
 */
 
 * {
@@ -19,13 +21,6 @@ body {
 }
 
 /* Text and articles */
-article {
-    box-sizing: border-box;
-    width: 70%;
-    margin: 0 15%;
-    margin-bottom: 60px;
-    text-align: center;
-}
 
 p {
     color: #333745;
@@ -38,6 +33,14 @@ p {
     margin-top: 50px;
 }
 
+article {
+    box-sizing: border-box;
+    width: 70%;
+    margin: 0 15% 60px;
+    text-align: center;
+}
+
+/* Blue text for highlighting */
 span.lightblue {
     color: #77C4D3;
 }
@@ -54,7 +57,6 @@ h2 {
     font-size: 50px;
     line-height: 70px;
     color: #77C4D3;
-    margin-bottom: -5px;
 }
 
 h3 {
@@ -80,7 +82,7 @@ h5 {
 /* navbar */
 nav ul {
     position: fixed;
-    height: 68px;
+    height: auto;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -89,10 +91,85 @@ nav ul {
     z-index: 1;
 }
 
+/* navbar responsive */
+@media screen and (max-width: 960px) {
+    nav ul li.firstitem, nav ul li:nth-child(5) {
+        margin: 0;
+    }
+
+    header nav ul li a {
+        padding: 22px 10px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    nav {
+        overflow: hidden;
+    }
+
+    nav ul {
+        height: 52px;
+        width: 100%;
+    }
+
+    header nav ul li:hover > ul, header nav ul li {
+        display: none;
+        float: none;
+    }
+
+    header nav ul li a {
+        font-size: 15px;
+        padding: 12px 0;
+    }
+
+    nav ul:hover > li {
+        display: block
+    }
+
+    nav ul:hover .navlogo {
+        display: none;
+    }
+
+    nav:hover > ul {
+        height: auto;
+    }
+
+    nav li.navlogo, a.alogo {
+        display: block;
+        margin: 0;
+        width: 100%;
+        float: left;
+    }
+
+    nav li.navlogo img {
+        float: left;
+        margin-left: 20px;
+        margin-top: 4px;
+    }
+
+    .alogo:after {
+        margin: 15px 15px 0 0;
+        float: right;
+        vertical-align: center;
+        content: "Menu";
+        font-size: 16px;
+
+    }
+    .alogo:before {
+        content: "";
+        background: url(../images/icons/menu.png) no-repeat;
+        width: 42px;
+        height: 42px;
+        float: right;
+        margin: 9px 20px 0 0;
+    }
+}
+
 nav ul li {
     float: left;
 }
 
+/* first nav item is moved to the center */
 .firstitem {
     margin-left: 9%;
 }
@@ -110,11 +187,11 @@ nav ul li a.hoverable:hover, nav li a.active {
 
 }
 
-nav li.navlogo, .alogo {
+li.navlogo, .alogo {
     float: right;
     margin-right: 9%;
     padding: 0;
-    margin-top: 3px;
+    margin-top: 7px;
 }
 
 /* navbar dropdown menu */
@@ -176,23 +253,12 @@ nav ul li ul li a.hoverable:hover {
     padding-top: 5%;
 }
 
-/* banner on the lineup page */
-.lineupbanner {
-    background: url(../images/photos/fireworks.jpg) no-repeat fixed center bottom;
-    background-size: cover;
-    min-height: 100%;
-    height: 50vh;
-    width: 100%;
-    margin: 0;
-    padding-top: 5%;
-}
-
 /* banner on the tickets page */
 .ticketsbanner {
-    background: url(../images/photos/ticket.jpg) no-repeat fixed center bottom;
+    background: url(../images/photos/colorfestival.jpg) no-repeat fixed center bottom;
     background-size: cover;
     min-height: 100%;
-    height: 50vh;
+    height: 85vh;
     width: 100%;
     margin: 0;
     padding-top: 5%;
@@ -222,7 +288,7 @@ header h1, header p {
 header h1.intro {
     font-size: 60px;
     text-align: center;
-    margin: 25px 0 25px 0;
+    margin: 25px 15%;
 }
 
 header p.slogan {
@@ -267,70 +333,60 @@ header p.slogan {
     color: white;
 }
 
-/* Image gallery for lineup page*/
-.centeredgallery {
-    text-align: center;
-    overflow: hidden;
-    list-style: none;
-}
-
-.galleryimg {
-    transition: all .5s ease;
-    filter: brightness(50%);
-    box-sizing: border-box;
-    transform: scale(1.0);
-}
-
-.galleryimg:hover {
-    filter: brightness(100%);
-    transform: scale(1.1);
-}
-
-.mask {
-    width: 250px;
-    height: 250px;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.galleryheader, .artistheader {
-    margin-top: 20px;
-    margin-bottom: 5px;
-}
-
-h3.galleryheader:hover {
-    color: #EA2E49;
-    text-decoration: underline;
-}
-
-.responsivegallery {
-    margin-top: 120px;
-    list-style: none;
-    display: inline-block;
-}
-
-/* artist pages */
-.artistgallery {
-    padding: 0;
-    float: left;
-    box-sizing: border-box;
-    width: 100%;
-}
-
 /* Form on ticket page*/
+section.buytickets {
+    box-sizing: border-box;
+    border: 1px solid lightgray;
+    border-radius: 15px;
+    width: 350px;
+    margin: -500px auto 60px;
+    background: rgba(255, 255, 255, .9);
+}
+
 form {
-    margin: 0 18% 0 18%;
+    margin: 60px 5%;
 }
 
 form ul li {
     list-style-type: none;
+    padding-top: 10px;
 }
 
-form ul li input {
+form ul li.inline {
+    display: inline-block;
+    width: 49%;
 }
 
 form ul li label {
-    width: 220px;
+    display: block;
+
+}
+
+form ul li input, form ul li select {
+    box-sizing: border-box;
+    padding-left: 10px;
+    width: 100%;
+    height: 40px;
+    font-size: 15px;
+    border: 1px solid lightgray;
+    border-radius: 7px;
+}
+
+.ticketbutton {
+    box-sizing: border-box;
+    height: 40px;
+    font-size: 16px;
+    border: 1px solid lightgray;
+    background-color: #EA2E49;
+    color: white;
+    padding: auto 0;
+    margin: 4px 2px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+form ul li label {
+    width: auto;
 }
 
 /* links */
@@ -360,12 +416,13 @@ footer h4 {
 }
 
 .footercolumns {
-    margin: auto;
 }
 
 footer div.column {
-    width: 310px;
-    padding-right: 10px;
+    width: 30%;
+    min-width: 200px;
+    padding-right: 5%;
+    box-sizing: border-box;
     color: #EA2E49;
     display: inline-block;
     vertical-align: top;
@@ -373,7 +430,6 @@ footer div.column {
 
 div.column ul {
     list-style: none;
-    padding: 0;
 }
 
 div.column ul li {
