--- a/HTML & CSS/INF103B_de_Ridder_Bryan/css/lineupstijlblad.css
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/css/lineupstijlblad.css
@@ -2,7 +2,7 @@
 .lineupbanner {
     background: url(../images/photos/fireworks.jpg) no-repeat fixed center bottom;
     background-size: cover;
-    min-height: 100%;
+    min-height: 370px;
     height: 50vh;
     width: 100%;
     margin: 0;
@@ -58,4 +58,5 @@ h3.galleryheader:hover {
     float: left;
     box-sizing: border-box;
     width: 100%;
+    min-height: 450px;
 }
