--- a/HTML & CSS/INF103B_de_Ridder_Bryan/css/ticketformstijlblad.css
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/css/ticketformstijlblad.css
@@ -8,6 +8,15 @@
     margin: 0;
     padding-top: 5%;
 }
+.ticketinfobanner {
+    background: url(../images/photos/beach.jpg) no-repeat fixed center bottom;
+    background-size: cover;
+    min-height: 370px;
+    height: 50vh;
+    width: 100%;
+    margin: 0;
+    padding-top: 5%;
+}
 
 /* Form on ticket page*/
 section.buytickets {
