--- a/HTML & CSS/INF103B_de_Ridder_Bryan/css/photogallery.css
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/css/photogallery.css
@@ -4,12 +4,9 @@
     background-size: cover;
     min-height: 370px;
     height: 50vh;
-    width: 100%;
-    margin: 0;
-    padding-top: 5%;
 }
 
-section.photogallery {
+.photogallery {
     min-width: 100%;
     border-top: 20px solid #77C4D3;
 }
